# RVizPluginStub

./: LICENSE  README.md
plugin_panel/: CMakeLists.txt  CMakeLists.txt~  plugin_description.xml  plugin_description.xml~
plugin_panel/include/: plugin_panel.h  plugin_panel.h~
plugin_panel/src/: plugin_panel.cpp  plugin_panel.cpp~
